--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -62,6 +62,20 @@
 .logo-sv{
     height: 16vh;
 }
+.nav-mobile{
+    height: 80px;
+    margin: 0px auto;
+    width: 220px;
+    list-style-type: none;
+    overflow: hidden;
+}
+.nav-item-mobile{
+    display: flex;
+    gap: 1px;
+    line-height: 60px;
+    float: left;
+    margin-top: 10px;
+}
 .mobile{
     display: none;
 }
