--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,7 +19,7 @@
                     <img src="/assets/images/ui-assets/ring.png" style="height: 60px;">
                 </a>
             </li>
-           <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;" (click)="showHide()"><a href="javascript:void(0);"  class="nav-link">
+           <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;" (click)="menu=!menu"><a href="javascript:void(0);"  class="nav-link">
                <img src="/assets/images/ui-assets/menu-icon.png" style="height: 50px;" />
            </a></li>
         </ul>
@@ -266,9 +266,6 @@
                 </div>
             </div>
         </div>
-
-
-
         <div>
             <div class="container title-container">
                 <h1 class="title-sm">Stageverse 101</h1>
@@ -278,48 +275,81 @@
         <owl-carousel-o [options]="customOptions">
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
-                <div class="slide stageverse-1">
-
-                        <div class="stageverse-content ">
-                            <h4 class="stage-heading">Customizable Avatars</h4>
-                            <p class="stageverse-text stage-paragraph">Flex your style with full-body, expressive avatars.</p>
-
-                        </div>
-
+            <div class="video-container ">
+                <video class="video-size" autoplay loop muted >
+                    <source src="/assets/images/ui-assets/video-1.mp4" type="video/mp4" />
+                </video>
+                <div class="overlay stageverse-content ">
+                    <h4 class="stage-heading">Customizable Avatars</h4>
+                    <p class="stageverse-text stage-paragraph">Flex your style with full-body, expressive avatars.</p>
                 </div>
+            </div>
+                <!-- <div class="slide stageverse-1">
+                    <div class="stageverse-content ">
+                        <h4 class="stage-heading">Customizable Avatars</h4>
+                        <p class="stageverse-text stage-paragraph">Flex your style with full-body, expressive avatars.</p>
+                    </div>
+                </div> -->
             </div>
             </ng-template>
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
-                    <div class="slide stageverse-2">
+                    <div class="video-container ">
+                        <video class="video-size" autoplay loop muted >
+                            <source src="/assets/images/ui-assets/video-2.mp4" type="video/mp4" />
+                        </video>
+                        <div class="overlay stageverse-content ">
+                            <h4 class="stage-heading">Friends & Parties</h4>
+                            <p class="stageverse-text stage-paragraph">Meet up and explore together. Can we add one more line here?</p>
+                        </div>
+                    </div>
+                    <!-- <div class="slide stageverse-2">
                     <div class="stageverse-content ">
                         <h4 class="stage-heading">Friends & Parties</h4>
                         <p class="stageverse-text stage-paragraph">Meet up and explore together. Can we add one more line here?</p>
 
                     </div>
-                    </div>
+                    </div> -->
             </div>
             </ng-template>
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
-                <div class="slide stageverse-3">
+                    <div class="video-container ">
+                        <video class="video-size" autoplay loop muted >
+                            <source src="/assets/images/ui-assets/video-3.mp4" type="video/mp4" />
+                        </video>
+                        <div class="overlay stageverse-content ">
+                            <h4 class="stage-heading">Spatial Voice Chat</h4>
+                            <p class="stageverse-text stage-paragraph">Talk and connect with others in beautifully-designed 3D spaces</p>
+                        </div>
+                    </div>
+                <!-- <div class="slide stageverse-3">
                     <div class="stageverse-content ">
                         <h4 class="stage-heading">Spatial Voice Chat</h4>
                         <p class="stageverse-text stage-paragraph">Talk and connect with others in beautifully-designed 3D spaces</p>
 
                     </div>
-                </div>
+                </div> -->
             </div>
             </ng-template>
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
-                <div class="slide stageverse-4">
+                    <div class="video-container ">
+                        <video class="video-size" autoplay loop muted >
+                            <source src="/assets/images/ui-assets/video-4.mp4" type="video/mp4" />
+                        </video>
+                        <div class="overlay stageverse-content ">
+                            <h4 class="stage-heading">Virtual Goods</h4>
+                            <p class="stageverse-text stage-paragraph">Play and express yourself with interactive toys and collectible items</p>
+                        </div>
+                    </div>
+                <!-- <div class="slide stageverse-4">
                     <div class="stageverse-content ">
                         <h4 class="stage-heading">Virtual Goods</h4>
                         <p class="stageverse-text stage-paragraph">Play and express yourself with interactive toys and collectible items</p>
 
                     </div>
-                </div>
+                </div> -->
             </div>
             </ng-template>
 
@@ -465,7 +495,7 @@
         </div>
     </div>
 
-<div class="content footer" style="margin-top: 120px; background: rgba(0, 0, 0, 0.5);">
+<div class="content footer footer-mt" >
     <app-footer></app-footer>
 </div>
 </div>
