--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -267,7 +267,7 @@
             </div>
         </div>
         <div>
-            <div class="container title-container">
+            <div class="container title-container margin-bottom">
                 <h1 class="title-sm">Stageverse 101</h1>
                 <h1 class="title-lg">Expand your world on stageverse </h1>
             </div>
@@ -376,7 +376,7 @@
 
             </div>
             <div class="culture-right">
-                <img class="mobile" src="/assets/images/ui-assets/culture-women.png" style="width: 75%;" />
+                <img class="mobile image-width" src="/assets/images/ui-assets/culture-women.png"  />
             </div>
         </div>
         <div>
